crates/math-core/tests/snapshots/error_test__ampersand_in_multline.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\begin{multline}1&1\\end{multline}"
---
Error: Found "&", which may only appear in a table-like environment.
   ╭─[ <input>:1:18 ]
   │
 1 │ \begin{multline}1&1\end{multline}
   │                  ┬  
   │                  ╰── cannot be used here
───╯
